--- a/bin/main/java/controllers/Home.fxml
+++ b/bin/main/java/controllers/Home.fxml
@@ -160,7 +160,7 @@
                               <TableColumn fx:id="roomTypeCol" prefWidth="93.0" text="Room Type" />
                               <TableColumn fx:id="checkInCol" prefWidth="125.0" text="Check In Date" />
                               <TableColumn fx:id="checkOutCol" prefWidth="151.0" text="Check Out Date" />
-                              <TableColumn fx:id="durationCol" prefWidth="106.0" text="Duration" />
+                              <TableColumn fx:id="durationCol" prefWidth="106.0" text="Day of Stay" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -171,7 +171,7 @@
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <Button fx:id="receiptButton" layoutX="979.0" layoutY="43.0" mnemonicParsing="false" text="View Receipt" textFill="#073422" />
+                        <Button fx:id="receiptButton" layoutX="979.0" layoutY="43.0" mnemonicParsing="false" onAction="#viewReceipt" text="View Receipt" textFill="#073422" />
                         <Button fx:id="editButton" layoutX="1092.0" layoutY="43.0" mnemonicParsing="false" onAction="#editReservation" prefHeight="25.0" prefWidth="53.0" text="Edit" />
                         <Button fx:id="deleteButton" layoutX="1154.0" layoutY="44.0" mnemonicParsing="false" onAction="#deleteReservation" text="Delete" textFill="#ae0000">
                            <font>
@@ -179,7 +179,7 @@
                            </font>
                         </Button>
                         <Separator layoutX="1074.0" layoutY="40.0" orientation="VERTICAL" prefHeight="32.0" prefWidth="7.0" />
-                        <Button fx:id="searchButton" layoutX="671.0" layoutY="44.0" mnemonicParsing="false" text="Search" />
+                        <Button fx:id="searchButton" layoutX="671.0" layoutY="44.0" mnemonicParsing="false" onAction="#search" text="Search" />
                         <TextField fx:id="searchInput" layoutX="494.0" layoutY="44.0" prefHeight="25.0" prefWidth="177.0" promptText="Search By Reservation ID" />
                         <Button fx:id="cancelEditReservationButton" layoutX="1154.0" layoutY="44.0" mnemonicParsing="false" onAction="#cancelEditReservation" style="visibility: hidden;" text="Cancel">
                            <font>
@@ -187,6 +187,11 @@
                            </font>
                         </Button>
                         <Button fx:id="confirmEditReservationButton" layoutX="1092.0" layoutY="43.0" mnemonicParsing="false" onAction="#confirmEditReservation" prefHeight="25.0" prefWidth="53.0" style="visibility: hidden;" text="Save" textFill="#018029" />
+                        <Button fx:id="refreshButton" layoutX="1215.0" layoutY="44.0" mnemonicParsing="false" onAction="#viewAllReservation" prefHeight="23.0" prefWidth="29.0" text="⟳" textFill="#166522">
+                           <font>
+                              <Font name="Segoe UI" size="12.0" />
+                           </font>
+                        </Button>
                      </children>
                   </AnchorPane>
             </content>
