--- a/bin/main/java/controllers/Home.fxml
+++ b/bin/main/java/controllers/Home.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.HomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controllers.HomeController" stylesheets="@../../resources/assets/css/main.css">
    <children>
       <Label alignment="CENTER" prefHeight="99.0" prefWidth="1280.0" style="-fx-background-color: #073422;" text="Resort Room Booking System" textFill="WHITE">
          <font>
